# design-patterns

./: CMakeLists.txt  Makefile  README.md  main.cpp
CRTP/: CMakeLists.txt  README.md  main.cpp
CRTP/include/: DenseVector.h  DynamicVector.h  StaticVector.h
factory/: CMakeLists.txt  README.md  main.cpp
factory/include/: pizza.h  pizza_ingredient.h  pizza_ingredient_factory.h  pizza_store.h  simple_pizza_factory.h
factory/src/: pizza_store.cpp  simple_pizza_factory.cpp
include/: Command.h  ControlCenter.h  DinerMenu.h  DinerMenuIterator.h  DrawStrategy.h  Iterator.h  LightCommand.h  Menu.h  MenuItem.h  OpenGlCircleStrategy.h  PancakHouseMenu.h  PancakeHouseMenu.h  PancakeHouseMenuIterator.h  TelevisionCommand.h  Waitress.h  pizza.h  pizza_ingredient.h  pizza_ingredient_factory.h  pizza_store.h  simple_pizza_factory.h
include/furnitures/: Furniture.h  Light.h  Television.h
include/oo_impl/: Draw.h  ShapeVisitor.h
include/oo_impl/shapes/: Square.h
include/shapes/: Circle.h  Shape.h  Square.h
src/: LightCommand.cpp  PancakeHouseMenu.cpp  PancakeHouseMenuIterator.cpp  Waitress.cpp  pizza_store.cpp  simple_pizza_factory.cpp
src/oo_impl/shapes/: Circle.cpp  Square.cpp
src/shapes/: Circle.cpp  Square.cpp
strategy/: CMakeLists.txt  main.cpp
strategy/include/: Circle.h  MetaCircleStrategy.h  Point.h  Shape.h
visitor/: CMakeLists.txt  README.md  main.cpp
visitor/include/inh_impl/: Draw.h  ShapeVisitor.h
visitor/include/inh_impl/shapes/: Circle.h  Shape.h  Square.h
visitor/include/oo_impl/: ShapeVisitor.h
visitor/include/var_impl/: Draw.h  util.h
(+9 files in other folders)
